# EnterpriseManager

./: .replit  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
attached_assets/: Pasted--IntegrityError-at-accounts-register-duplicate-key-value-violates-unique-constraint-accounts-us-1746459907520.txt  Pasted--NameError-at-dashboard-name-models-is-not-defined-Request-Method-GET-Request-URL-http-b-1746460822062.txt  Pasted--TemplateDoesNotExist-at-attendance-request-attendance-attendance-request-html-Request-Method--1746459110225.txt  Pasted-Build-a-comprehensive-modular-Django-based-web-application-tailored-for-Small-and-Medium-Enterprise-1746453868576.txt  Pasted-NoReverseMatch-at-dashboard-Reverse-for-index-not-found-index-is-not-a-valid-view-function-o-1746458916000.txt  Pasted-TemplateDoesNotExist-at-accounts-profile-accounts-profile-html-Request-Method-GET-Request-URL--1746463612313.txt  Pasted-TemplateDoesNotExist-at-attendance-admin-approvals-3-approve-attendance-approve-attendance-html--1746461975234.txt  Pasted-TemplateDoesNotExist-at-attendance-admin-approvals-3-attendance-attendance-approval-detail-html--1746461977153.txt  Pasted-TemplateDoesNotExist-at-attendance-admin-approvals-attendance-attendance-approval-html-Request-M-1746461972989.txt  Pasted-TemplateDoesNotExist-at-attendance-leave-request-attendance-leave-request-html-Request-Method-G-1746463630355.txt  Pasted-TemplateDoesNotExist-at-attendance-request-attendance-attendance-request-html-Request-Method-GE-1746459055587.txt
attendance/: __init__.py  (+8 more)
(+79 files in other folders)
